# svgtools

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: revolve.icns
construct_3d/: revolve_about_axis.py  revolve_gui.py
geometric_operations/: difference.py  union.py
utils/: svg_utils.py
