[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "svgtools"
version = "0.1.0"
dependencies = [
    "svgpathtools", # tested on 1.4.0
    "pyclipper", # tested 1.7.2
]

[tool.setuptools.packages.find]
include = ["construct_3d*", "geometric_operations*", "utils*"]